added noscript messages

--- a/index.html
+++ b/index.html
@@ -264,6 +264,15 @@
             </button>
         </div>
 
+        <noscript class="prompt-overlay">
+            <div class="prompt-dialog" style="max-width: 500px; padding: 10px;">
+                <h2>Fatal</h2>
+                <p>Scripts failed to load, the UI was locked to protect your data.</p>
+                <p>Update your browser, check settings and extensions.</p>
+                <a target="_blank" href="https://github.com/flarom/cohesion/issues">Report an issue</a>
+            </div>
+        </noscript>
+
         <script src="script/i18n.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
         <script src="script/highlight/lib/highlight.min.js"></script>
