pt-br translation: added main application

--- a/dialogs/macros.html
+++ b/dialogs/macros.html
@@ -138,8 +138,8 @@
                 container.appendChild(div);
             });
 
-            cacheOriginalContent();
-            cacheOriginalAttributes();
+            // cacheOriginalContent();
+            // cacheOriginalAttributes();
             applyLanguage();
         }
 
