update landing page

--- a/landing.html
+++ b/landing.html
@@ -50,7 +50,7 @@
 <body>
     <header>
         <div>
-            <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
+            <a href="index.html?intro=true" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
                 <img src="cohesion/favicon.svg" alt="" width="48">
                 <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
@@ -232,6 +232,10 @@
 
         function handleStartApplication() {
             fadeOutAllDialogs();
+
+            const cleanUrl = new URL(window.location.href);
+            cleanUrl.searchParams.delete('intro');
+            window.history.replaceState({}, "", cleanUrl);
 
             if (/Mobi|Android/i.test(navigator.userAgent)) {
                 const html = `
