--- a/share.html
+++ b/share.html
@@ -104,7 +104,7 @@
     </div>
     <header>
         <div>
-            <a href="index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
+            <a href="index.html?intro=true" target="_blank" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
                 <img src="cohesion/favicon.svg" alt="" width="48">
                 <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
@@ -123,8 +123,6 @@
     </div>
 
     <input type="file" id="fileInput" accept=".md,.markdown,.txt,text/markdown,text/plain" style="display:none" />
-
-    
 
     <script src="script/file.js"></script>
     <script src="script/settings.js"></script>
