--- a/tools/markdown-reader.html
+++ b/tools/markdown-reader.html
@@ -113,7 +113,7 @@
 <body class="theme-dark">
     <header>
         <div>
-            <a href="../index.html" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
+            <a href="../index.html?intro=true" style="display: inline-flex; align-items: center; color: var(--text-color); text-decoration: none;">
                 <img src="../cohesion/favicon.svg" alt="" width="48">
                 <h2 translate="no" class="header-text">Cohesion</h2>
             </a>
