fixed translations breaking default english text

--- a/dialogs/cheatsheet.html
+++ b/dialogs/cheatsheet.html
@@ -224,7 +224,8 @@ Pipe     | $1</code></pre>
                     break;                    
             }
         }
-        
+        cacheOriginalContent();
+        cacheOriginalAttributes();
         applyLanguage();
     </script>
 </body>
